show detailed request timings in search response
